--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ nav .nav__logo a span {
 
 header {
   height: 100vh;
-  background-image: url("assets/WhatsApp_Image_2025-04-22_at_11.11.27-removebg-preview.png");
+  background-image: url("assets/hello.png");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
